<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageCops"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/policeman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/bgColor"
        android:contentDescription="@string/options"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/options" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/danger_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/danger_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/danger_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_redButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/danger_bg"
            android:contentDescription="@string/strBtn"
            android:src="@drawable/button" />

    </LinearLayout>

    <TextView
        android:id="@+id/warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_layout" />



</androidx.constraintlayout.widget.ConstraintLayout>